force-app/main/default/objects/AuctionInformation__c/AuctionInformation__c.object-meta.xml
<CustomObject>
    <label>オークション情報</label>
    <nameField>
        <displayFormat>A{0000000000}</displayFormat>
        <label>オークション情報名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>