force-app/main/default/objects/AuctionInformation__c/fields/auc_sales_price__c.field-meta.xml
<CustomField>
    <fullName>auc_sales_price__c</fullName>
    <label>売却金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>