force-app/main/default/objects/AuctionInformation__c/fields/car_grade__c.field-meta.xml
<CustomField>
    <fullName>car_grade__c</fullName>
    <label>グレード</label>
    <length>100</length>
    <type>Text</type>
</CustomField>