force-app/main/default/objects/AuctionInformation__c/fields/car_model__c.field-meta.xml
<CustomField>
    <fullName>car_model__c</fullName>
    <label>車種</label>
    <length>100</length>
    <type>Text</type>
</CustomField>