force-app/main/default/objects/AuctionInformation__c/fields/car_type__c.field-meta.xml
<CustomField>
    <fullName>car_type__c</fullName>
    <label>型式</label>
    <length>100</length>
    <type>Text</type>
</CustomField>