force-app/main/default/objects/AuctionInformation__c/fields/cell__c.field-meta.xml
<CustomField>
    <fullName>cell__c</fullName>
    <label>セル</label>
    <length>100</length>
    <type>Text</type>
</CustomField>