force-app/main/default/objects/AuctionInformation__c/fields/ControlNumber__c.field-meta.xml
<CustomField>
    <fullName>ControlNumber__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>管理番号</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>