force-app/main/default/objects/AuctionInformation__c/fields/engine__c.field-meta.xml
<CustomField>
    <fullName>engine__c</fullName>
    <label>エンジン</label>
    <length>100</length>
    <type>Text</type>
</CustomField>