force-app/main/default/objects/AuctionInformation__c/fields/jiso__c.field-meta.xml
<CustomField>
    <fullName>jiso__c</fullName>
    <label>自走</label>
    <length>100</length>
    <type>Text</type>
</CustomField>