force-app/main/default/objects/AuctionInformation__c/fields/registerdAtYear__c.field-meta.xml
<CustomField>
    <fullName>registerdAtYear__c</fullName>
    <label>年式</label>
    <length>100</length>
    <type>Text</type>
</CustomField>