force-app/main/default/objects/AuctionInformation__c/fields/SoldData__c.field-meta.xml
<CustomField>
    <fullName>SoldData__c</fullName>
    <label>売却日</label>
    <type>Date</type>
</CustomField>