force-app/main/default/objects/AuctionInformation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ControlNumber__c</columns>
    <columns>car_model__c</columns>
    <columns>car_type__c</columns>
    <columns>registerdAtYear__c</columns>
    <columns>car_grade__c</columns>
    <columns>run_dist__c</columns>
    <columns>engine__c</columns>
    <columns>cell__c</columns>
    <columns>jiso__c</columns>
    <columns>SoldData__c</columns>
    <columns>auc_sales_price__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>